--- a/app/src/main/res/drawable/catalog_category_bg.xml
+++ b/app/src/main/res/drawable/catalog_category_bg.xml
@@ -2,7 +2,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/gray"/>
-    <stroke android:width="1dp" android:color="#B1BCBE" />
+    <stroke android:width="1dp" android:color="#B1BCBE"/>
     <corners android:radius="20dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+    <padding android:left="0dp" android:top="0dp"
+        android:right="0dp" android:bottom="0dp"/>
 </shape>
