--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -131,7 +131,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:text="@string/catalog_accordion"
+                        android:text="@string/title_accordion"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="italic" />
