--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -10,6 +10,7 @@
             type="com.example.harmonicatulashop.ui.favourite.FavouriteViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/favourite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.cart.CartFragment">
@@ -37,11 +38,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginBottom="7dp"
+                        android:layout_marginStart="12dp"
                         android:text="@string/title_harmonica"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="italic"
-                        android:layout_margin="7dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" />
@@ -58,13 +61,27 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <TextView
+                    android:id="@+id/harmonica_empty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/empty"
+                    android:textSize="18sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/harmonica_favourite_category"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="gone" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/harmonica_favourite_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="500dp"
                     android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/harmonica_favourite_category"
-                    android:visibility="gone"/>
+                    app:layout_constraintTop_toBottomOf="@+id/harmonica_empty"
+                    android:visibility="gone" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/bayan_favourite_category"
@@ -81,11 +98,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginBottom="7dp"
+                        android:layout_marginStart="12dp"
                         android:text="@string/title_bayan"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="italic"
-                        android:layout_margin="7dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" />
@@ -102,12 +121,30 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <TextView
+                    android:id="@+id/bayan_empty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/empty"
+                    android:textSize="18sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/bayan_favourite_category"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="gone" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/bayan_favourite_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/bayan_favourite_category"
+                    android:text="@string/empty"
+                    android:textSize="18sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/bayan_empty"
                     android:visibility="gone"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -125,11 +162,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginBottom="7dp"
+                        android:layout_marginStart="12dp"
                         android:text="@string/title_accordion"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="italic"
-                        android:layout_margin="7dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" />
@@ -142,17 +181,31 @@
                         android:src="@drawable/baseline_expand_more_24"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintBottom_toBottomOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:id="@+id/accordion_empty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/empty"
+                    android:textSize="18sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/accordion_favourite_category"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/accordion_favourite_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/accordion_favourite_category"
-                    android:visibility="gone"/>
+                    app:layout_constraintTop_toBottomOf="@+id/accordion_empty"
+                    android:visibility="gone" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
