--- a/app/src/main/res/layout/fragment_accordion.xml
+++ b/app/src/main/res/layout/fragment_accordion.xml
@@ -14,6 +14,7 @@
         android:id="@+id/accordion_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.fragments.AccordionFragment">
 
         <ScrollView
