--- a/app/src/main/res/layout/fragment_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_admin_settings.xml
@@ -6,15 +6,15 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.harmonicatulashop.ui.account.viewmodels.UserSettingsViewModel" />
+            type="com.example.harmonicatulashop.ui.account.viewmodels.AdminSettingsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/user_settings_layout"
+        android:id="@+id/admin_settings_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".ui.account.fragments.UserSettingsFragment">
+        tools:context=".ui.account.fragments.AdminSettingsFragment">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/user_login_settings"
+                    android:id="@+id/admin_login_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_login"
@@ -39,45 +39,45 @@
                     app:layout_constraintVertical_bias="0.053" />
 
                 <EditText
-                    android:id="@+id/edit_user_login"
+                    android:id="@+id/edit_admin_login"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:inputType="textPersonName"
-                    app:layout_constraintStart_toStartOf="@id/user_login_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/user_login_settings" />
+                    app:layout_constraintStart_toStartOf="@id/admin_login_settings"
+                    app:layout_constraintTop_toBottomOf="@+id/admin_login_settings" />
 
                 <TextView
-                    android:id="@+id/user_password_settings"
+                    android:id="@+id/admin_password_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="@string/password"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_user_login"
-                    app:layout_constraintStart_toStartOf="@id/user_login_settings"/>
+                    app:layout_constraintTop_toBottomOf="@+id/edit_admin_login"
+                    app:layout_constraintStart_toStartOf="@id/admin_login_settings"/>
 
                 <EditText
-                    android:id="@+id/edit_user_password"
+                    android:id="@+id/edit_admin_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:ems="10"
                     android:inputType="textPassword"
-                    app:layout_constraintStart_toStartOf="@+id/user_password_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/user_password_settings"/>
+                    app:layout_constraintStart_toStartOf="@+id/admin_password_settings"
+                    app:layout_constraintTop_toBottomOf="@+id/admin_password_settings"/>
 
                 <TextView
-                    android:id="@+id/user_repeat_password_settings"
+                    android:id="@+id/admin_repeat_password_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="@string/repeat_password"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_user_password"
-                    app:layout_constraintStart_toStartOf="@+id/user_password_settings"/>
+                    app:layout_constraintTop_toBottomOf="@+id/edit_admin_password"
+                    app:layout_constraintStart_toStartOf="@+id/admin_password_settings"/>
 
                 <EditText
                     android:id="@+id/repeat_edit_password"
@@ -86,11 +86,11 @@
                     android:layout_marginTop="10dp"
                     android:ems="10"
                     android:inputType="textPassword"
-                    app:layout_constraintTop_toBottomOf="@id/user_repeat_password_settings"
-                    app:layout_constraintStart_toStartOf="@id/user_repeat_password_settings" />
+                    app:layout_constraintTop_toBottomOf="@id/admin_repeat_password_settings"
+                    app:layout_constraintStart_toStartOf="@id/admin_repeat_password_settings" />
 
                 <TextView
-                    android:id="@+id/user_name_settings"
+                    android:id="@+id/admin_name_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
@@ -98,74 +98,54 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     app:layout_constraintHorizontal_bias="0.089"
-                    app:layout_constraintStart_toStartOf="@id/user_repeat_password_settings"
+                    app:layout_constraintStart_toStartOf="@id/admin_repeat_password_settings"
                     app:layout_constraintTop_toBottomOf="@id/repeat_edit_password"
                     app:layout_constraintVertical_bias="0.053" />
 
                 <EditText
-                    android:id="@+id/edit_user_name"
+                    android:id="@+id/edit_admin_name"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:inputType="textPersonName"
-                    app:layout_constraintStart_toStartOf="@id/user_name_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/user_name_settings" />
+                    app:layout_constraintStart_toStartOf="@id/admin_name_settings"
+                    app:layout_constraintTop_toBottomOf="@+id/admin_name_settings" />
 
                 <TextView
-                    android:id="@+id/user_lastname_settings"
+                    android:id="@+id/admin_lastname_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="@string/settings_lastname"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="@id/user_name_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_user_name" />
+                    app:layout_constraintStart_toStartOf="@id/admin_name_settings"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_admin_name" />
 
                 <EditText
-                    android:id="@+id/edit_user_lastname"
+                    android:id="@+id/edit_admin_lastname"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:inputType="textPersonName"
-                    app:layout_constraintStart_toStartOf="@id/user_lastname_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/user_lastname_settings" />
-
-                <TextView
-                    android:id="@+id/user_address_settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
-                    android:text="@string/settings_address"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="@id/user_lastname_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_user_lastname" />
-
-                <EditText
-                    android:id="@+id/edit_user_address"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textPostalAddress"
-                    app:layout_constraintStart_toStartOf="@id/user_address_settings"
-                    app:layout_constraintTop_toBottomOf="@+id/user_address_settings" />
+                    app:layout_constraintStart_toStartOf="@id/admin_lastname_settings"
+                    app:layout_constraintTop_toBottomOf="@+id/admin_lastname_settings" />
 
                 <TextView
                     android:id="@+id/wrong_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:text="@string/wrong_password"
                     android:textColor="@color/red"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_user_address"
-                    android:visibility="gone"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edit_admin_lastname"/>
 
                 <TextView
-                    android:id="@+id/confirm_text_view_user"
+                    android:id="@+id/confirm_text_view_admin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -177,7 +157,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/wrong_password" />
 
                 <EditText
-                    android:id="@+id/confirm_changes_user"
+                    android:id="@+id/confirm_changes_admin"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -185,16 +165,16 @@
                     android:background="@drawable/text_input_bg"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/confirm_text_view_user" />
+                    app:layout_constraintTop_toBottomOf="@+id/confirm_text_view_admin" />
 
                 <Button
-                    android:id="@+id/confirm_user_changes_button"
+                    android:id="@+id/confirm_admin_changes_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="60dp"
                     android:layout_marginBottom="40dp"
                     android:text="@string/save_changes"
-                    app:layout_constraintTop_toBottomOf="@+id/confirm_changes_user"
+                    app:layout_constraintTop_toBottomOf="@+id/confirm_changes_admin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:onClick="@{()->viewModel.saveChanges()}"/>
