--- a/app/src/main/res/layout/item_bayan.xml
+++ b/app/src/main/res/layout/item_bayan.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="190dp"
     android:layout_margin="8dp"
-    android:background="@color/white"
+    android:background="@drawable/harmonica_bg"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true">
