--- a/app/src/main/res/layout/fragment_add_bayan.xml
+++ b/app/src/main/res/layout/fragment_add_bayan.xml
@@ -133,6 +133,7 @@
                     app:layout_constraintTop_toBottomOf="@id/options_bayan_title" />
 
                 <Button
+                    android:id="@+id/add_bayan_to_catalog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
