--- a/app/src/main/res/layout/item_accordion.xml
+++ b/app/src/main/res/layout/item_accordion.xml
@@ -7,9 +7,7 @@
     android:layout_height="190dp"
     android:layout_margin="8dp"
     android:background="@drawable/harmonica_bg"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true">
+    android:clickable="true">
 
     <ImageView
         android:id="@+id/accordion_icon"
